# chip8

./: CMakeLists.txt  README.md
include/: cpu.h
src/: cpu.c  main.c
